--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,88 +1,112 @@
-
 <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm custom-navbar fixed-top">
-    <div class="container-fluid">
-        <!-- Toggler button for small screens -->
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+	<div
+		class="container-fluid">
+		<!-- Toggler button for small screens -->
+		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
 
-        <!-- Navbar content -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <!-- Left-aligned links -->
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ path('app_home') }}">
-                        Accueil
-                    </a>
-                </li>
-                {% if app.user %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ path('participant_profile') }}">
-                            Mon Profil
-                        </a>
-                    </li>
-                {% endif %}
-            </ul>
+		<!-- Navbar content -->
+		<div
+			class="collapse navbar-collapse" id="navbarNav">
+			<!-- Left-aligned links -->
+			<ul class="navbar-nav">
+				<li class="nav-item">
+					<a class="nav-link active" aria-current="page" href="{{ path('app_home') }}">
+						Accueil
+					</a>
+				</li>
+				{% if app.user %}
+					<li class="nav-item">
+						<a class="nav-link" href="{{ path('participant_profile') }}">
+							Mon Profil
+						</a>
+					</li>
+				{% endif %}
+			</ul>
 
-            <!-- Right-aligned links -->
-            <ul class="navbar-nav ms-auto">
-                {% if not app.user %}
-                    <li class="nav-item">
-                        <a class="btn btn-outline-primary me-2" href="{{ path('app_register') }}" title="S'inscrire">
-                            S'inscrire
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="btn btn-primary text-white" href="{{ path('app_login') }}" title="Se connecter">
-                            Se connecter
-                        </a>
-                    </li>
-                {% else %}
-                    {% if is_granted('ROLE_ADMIN') %}
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Gerer les sorties</a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="{{ path('admin_sortir_create') }}">Créer une sortie</a></li>
-                            <li><a class="dropdown-item" href="{{ path('admin_sortir_index') }}">Liste des sorties</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            {# <li><a class="dropdown-item" href="#">Créer un participant</a></li>
-                            <li><a class="dropdown-item" href="#">Liste des participants</a></li> #}
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Gerer les paricipants</a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Créer un participant</a></li>
-                            <li><a class="dropdown-item" href="#">Liste des participants</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Gerer les sites</a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="{{path('app_admin_add_site')}}">Créer un site</a></li>
-                            <li><a class="dropdown-item" href="{{ path('app_admin_all_site')}}">Liste des site</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Créer un lieu</a></li>
-                            <li><a class="dropdown-item" href="#">Liste des lieux</a></li>
-                        </ul>
-                    </li>
-                    {% else %}
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Users</a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="{{ path('app_sortie_create') }}">Créer une sortie</a></li>
-                            <li><a class="dropdown-item" href="{{ path('app_all_sorties') }}">Liste des sorties</a></li>
-                        </ul>
-                    </li>
-                    {% endif %}
-                    <li class="nav-item">
-                        <a class="btn btn-danger text-white ms-2" href="{{ path('app_logout') }}" title="Se déconnecter">
-                            Se déconnecter
-                        </a>
-                    </li>
-                {% endif %}
-            </ul>
-        </div>
-    </div>
+			<!-- Right-aligned links -->
+			<ul class="navbar-nav ms-auto">
+				{% if not app.user %}
+					<li class="nav-item">
+						<a class="btn btn-outline-primary me-2" href="{{ path('app_register') }}" title="S'inscrire">
+							S'inscrire
+						</a>
+					</li>
+					<li class="nav-item">
+						<a class="btn btn-primary text-white" href="{{ path('app_login') }}" title="Se connecter">
+							Se connecter
+						</a>
+					</li>
+				{% else %}
+					{% if is_granted('ROLE_ADMIN') %}
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Gerer les sorties</a>
+							<ul class="dropdown-menu">
+								<li>
+									<a class="dropdown-item" href="{{ path('admin_sortir_create') }}">Créer une sortie</a>
+								</li>
+								<li>
+									<a class="dropdown-item" href="{{ path('admin_sortir_index') }}">Liste des sorties</a>
+								</li>
+								<li><hr class="dropdown-divider"></li>
+								{# <li><a class="dropdown-item" href="#">Créer un participant</a></li>
+																																								                            <li><a class="dropdown-item" href="#">Liste des participants</a></li> #}
+							</ul>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Gerer les paricipants</a>
+							<ul class="dropdown-menu">
+								<li>
+									<a class="dropdown-item" href="{{path('app_admin_participant')}}">Créer des participant</a>
+								</li>é
+								<li>
+									<a class="dropdown-item" href="{{path('app_admin_participant')}}">Créer un participant</a>
+								</li>
+								<li>
+									<a class="dropdown-item" href="#">Liste des participants</a>
+								</li>
+								<li><hr class="dropdown-divider"></li>
+							</ul>
+						</li>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Gerer les sites</a>
+							<ul class="dropdown-menu">
+								<li>
+									<a class="dropdown-item" href="{{path('app_admin_add_site')}}">Créer un site</a>
+								</li>
+								<li>
+									<a class="dropdown-item" href="{{ path('app_admin_all_site')}}">Liste des site</a>
+								</li>
+								<li><hr class="dropdown-divider"></li>
+								<li>
+									<a class="dropdown-item" href="#">Créer un lieu</a>
+								</li>
+								<li>
+									<a class="dropdown-item" href="#">Liste des lieux</a>
+								</li>
+							</ul>
+						</li>
+					{% else %}
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Users</a>
+							<ul class="dropdown-menu">
+								<li>
+									<a class="dropdown-item" href="{{ path('app_sortie_create') }}">Créer une sortie</a>
+								</li>
+								<li>
+									<a class="dropdown-item" href="{{ path('app_all_sorties') }}">Liste des sorties</a>
+								</li>
+							</ul>
+						</li>
+					{% endif %}
+					<li class="nav-item">
+						<a class="btn btn-danger text-white ms-2" href="{{ path('app_logout') }}" title="Se déconnecter">
+							Se déconnecter
+						</a>
+					</li>
+				{% endif %}
+			</ul>
+		</div>
+	</div>
 </nav>
