admin participant controller

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -53,7 +53,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Gerer les participants</a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Créer un participant</a></li>
+                            <li><a class="dropdown-item" href="{{ path('app_admin_participants_create_massiv)}}">Créer un participant</a></li>
                             <li><a class="dropdown-item" href="{{ path('app_admin_participants_list') }}">Liste des participants</a></li>
                             <li><hr class="dropdown-divider"></li>
                         </ul>
