add lieux links

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -78,10 +78,10 @@
 								</li>
 								<li><hr class="dropdown-divider"></li>
 								<li>
-									<a class="dropdown-item" href="#">Créer un lieu</a>
+									<a class="dropdown-item" href="{{ path('app_lieu_create') }}">Créer un lieu</a>
 								</li>
 								<li>
-									<a class="dropdown-item" href="#">Liste des lieux</a>
+									<a class="dropdown-item" href="{{ path('app_lieu_list') }}">Liste des lieux</a>
 								</li>
 							</ul>
 						</li>
@@ -108,10 +108,10 @@
 								</li>
 								<li><hr class="dropdown-divider"></li>
 								<li>
-									<a class="dropdown-item" href="#">Créer un lieu</a>
+									<a class="dropdown-item" href="{{ path('app_lieu_create') }}">Créer un lieu</a>
 								</li>
 								<li>
-									<a class="dropdown-item" href="#">Liste des lieux</a>
+									<a class="dropdown-item" href="{{ path('app_lieu_list') }}">Liste des lieux</a>
 								</li>
 
 							</ul>
